# MCQ_Chinese_DSE

./: .easignore  .gitignore  App.tsx  README.md  app.config.ts  app.json  babel.config.js  eas.json  package-lock.json  package.json  tsconfig.json
backend/mcq_generator/: .env.example  .gitignore  MCQ_GENERATION_GUIDELINES.md  README.md  _check_dist.py  _db_distribution.txt  batch_questions.py  dashboard.html  fix_explanations.py  pyproject.toml  start.bat
backend/mcq_generator/audit_reports/: category_audit_log.json  deactivated_pronunciation.json  explanation_quality_flags.json  fix_english_log.json  fix_obvious_log.json  fix_obvious_pass2_log.json  obvious_answers_audit.json  option_explanation_audit.json  p01_audit_report.md  p02_audit_report.md  p03_audit_report.md  p04_audit_report.md  p05_audit_report.md  p06_audit_report.md  p07_audit_report.md  p08_audit_report.md  p09_audit_report.md  p10_audit_report.md  p11_audit_report.md  p12_audit_report.md
backend/mcq_generator/mcq_gen/: __init__.py  cli.py  config.py  dse_reference.py  graph.py  llm.py  logger.py  passage_db.py  passages.py  quiz_assembler.py  quiz_builder.py  schemas.py  school_ws_loader.py  server.py  template_utils.py
backend/mcq_generator/mcq_gen/agents/: corrector.py  critic.py  drafter.py  strategist.py
backend/mcq_generator/mcq_gen/db/: client.py  flagged.py  stats.py  stems.py  writer.py
backend/mcq_generator/mcq_gen/prompts/: corrector_prompt.md  critic.md  critic_prompt.md  critic_user.md  drafter.md  drafter_prompt.md  drafter_revision_prompt.md  drafter_user.md  injection_config.json  (+6 more)
(+237 files in other folders)
