[project]
name = "mcq-generator"
version = "0.1.0"
description = "HK DSE Chinese MC question agentic generator (3-agent pipeline)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.0",
    "openai>=1.50.0",
    "supabase>=2.7.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "typer>=0.12.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.0",
    "rich>=13.7.0",
]

[project.scripts]
mcq-gen = "mcq_gen.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["mcq_gen*"]
